# web-offer-scrapper

./: .flake8  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
collect_data/: scrap_utils.py
collect_data/converters/: convert_data.py
collect_data/database_utils/: config.py  config_database.py
collect_data/scrap_handlers/: config.py  otodom_listing_page_handler.py  otodom_offer_page_handler.py
web_offer_scrapper/: main.py
web_offer_scrapper/collect_data/: scrap_utils.py
web_offer_scrapper/collect_data/converters/: convert_data.py
web_offer_scrapper/collect_data/scrap_handlers/: config.py  otodom_listing_page_handler.py  otodom_offer_page_handler.py
web_offer_scrapper/project_utils/: logger.py
