[tool.poetry]
name = "web-offer-scrapper"
version = "0.1.0"
description = "General scrapper for web offers"
authors = ["Bartosz Rozycki <rozycki1232@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-plugin-export = "^1.8.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20240712"
unidecode = "^1.3.8"
selenium = "^4.23.1"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
skip = [".gitignore", ".dockerignore"]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
disable_error_code = ["import-untyped"]
strict = true
